{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 96,
  "lineage": "6d530293-27e7-e39c-e34e-4cf7257ddb34",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-0d5e3cb0f9e4a79ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5e3cb0f9e4a79ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d46cdd1c1b82ea5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-SG-2024110518271416800000000c",
            "name_prefix": "db-SG-",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Y-R DB Security Group",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R DB Security Group",
              "Project": "TeamE"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecd077dd3986da13",
            "arn": "arn:aws:ec2:us-east-1:992382545251:elastic-ip/eipalloc-0ecd077dd3986da13",
            "domain": "vpc",
            "id": "eipalloc-0ecd077dd3986da13",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-189-106.compute-1.amazonaws.com",
            "public_ip": "18.235.189.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Y-R NAT EIP",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R NAT EIP",
              "Project": "TeamE"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:internet-gateway/igw-0e11024fbfc5e2e52",
            "id": "igw-0e11024fbfc5e2e52",
            "owner_id": "992382545251",
            "tags": {
              "Name": "Y-R IGW",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R IGW",
              "Project": "TeamE"
            },
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecd077dd3986da13",
            "association_id": "eipassoc-0e876ee98f4ded467",
            "connectivity_type": "public",
            "id": "nat-03ea0624c5fb2a623",
            "network_interface_id": "eni-09ec72bb1eedb1499",
            "private_ip": "10.0.0.213",
            "public_ip": "18.235.189.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05b967107e9f0368d",
            "tags": {
              "Name": "Y-R NAT Gateway",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R NAT Gateway",
              "Project": "TeamE"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8d50ea5335c4d9d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03ea0624c5fb2a623",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8d50ea5335c4d9d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-0d8d50ea5335c4d9d",
            "id": "rtb-0d8d50ea5335c4d9d",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Y-R Private Route Table",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Private Route Table",
              "Project": "TeamE"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-06de07727a2672624",
            "id": "rtb-06de07727a2672624",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e11024fbfc5e2e52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Y-R Public Route Table",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Public Route Table",
              "Project": "TeamE"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076ea38a792bb3e28",
            "route_table_id": "rtb-0d8d50ea5335c4d9d",
            "subnet_id": "subnet-05504bbef77da5a82"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d723a6dea3ee6496",
            "route_table_id": "rtb-0d8d50ea5335c4d9d",
            "subnet_id": "subnet-033acf7d8c622cded"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ab4b6cb1113b39",
            "route_table_id": "rtb-06de07727a2672624",
            "subnet_id": "subnet-05b967107e9f0368d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019c5b3c6ffb3d71c",
            "route_table_id": "rtb-06de07727a2672624",
            "subnet_id": "subnet-0d1ee14f17baca49e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-0543c9b74bbb933d0",
            "description": "Security group for the application running on port 8000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0543c9b74bbb933d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "app-security-group",
            "name_prefix": "",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Y-R Application Security Group",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Application Security Group",
              "Project": "TeamE"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-01d46cdd1c1b82ea5",
            "description": "EKS worker node security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d46cdd1c1b82ea5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eks-cluster-eks-node-sg",
            "name_prefix": "",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Y-R-EKS-Node-SG",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R-EKS-Node-SG",
              "Project": "TeamE"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-05504bbef77da5a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05504bbef77da5a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y-R Private Subnet us-east-1a",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Private Subnet us-east-1a",
              "Project": "TeamE"
            },
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-033acf7d8c622cded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033acf7d8c622cded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y-R Private Subnet us-east-1b",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Private Subnet us-east-1b",
              "Project": "TeamE"
            },
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-05b967107e9f0368d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b967107e9f0368d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y-R Public Subnet us-east-1a",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Public Subnet us-east-1a",
              "Project": "TeamE"
            },
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-0d1ee14f17baca49e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1ee14f17baca49e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y-R Public Subnet us-east-1b",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R Public Subnet us-east-1b",
              "Project": "TeamE"
            },
            "vpc_id": "vpc-04b3e5004e3ec9591"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:vpc/vpc-04b3e5004e3ec9591",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bec88826384c2981",
            "default_route_table_id": "rtb-0cecde87b97d45699",
            "default_security_group_id": "sg-0708e1065c59a3708",
            "dhcp_options_id": "dopt-0c7c69517f17e01b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b3e5004e3ec9591",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cecde87b97d45699",
            "owner_id": "992382545251",
            "tags": {
              "Name": "Y-R VPC",
              "Project": "TeamE"
            },
            "tags_all": {
              "Name": "Y-R VPC",
              "Project": "TeamE"
            }
          }
        }
      ]
    }
  ]
}